# mps-gptq

./: .gitignore  CMakeLists.txt  README.md
MPS-GPTQ/: MPS_GPTQ.metal
MPS-GPTQ.xcodeproj/: project.pbxproj
MPS-GPTQ.xcodeproj/xcuserdata/aperdomo.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: metal_add.h  metal_gemm.h  metal_hessian.h  metal_quantize_layer.h  metal_utils.h
src/: main.mm  metal_add.metal  metal_add.mm  metal_gemm.metal  metal_gemm.mm  metal_hessian.metal  metal_hessian.mm  metal_quantize_layer.metal  metal_quantize_layer.mm  metal_utils.mm
